--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ input::placeholder {
   color: var(--background-color);
 }
 
-#COPY_SNACKBAR {
+#SNACKBAR {
   min-width: 250px;
   margin-left: -125px;
   background-color: var(--primary);
